# mkinitrd

./: .gitlab-ci.yml  meson.build
src/: config.sh  init.c  modprobe.c
src/hooks/: netboot.sh  zram.sh
src/scripts/: filesystem.sh  netboot.sh  zram.sh
